--- a/benchmarks/hey/Makefile
+++ b/benchmarks/hey/Makefile
@@ -8,7 +8,7 @@ CATEGORIES=	benchmarks
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Tiny program that sends some load to a web application
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 USES=		go:modules
