--- a/devel/jetbrains-restarter/Makefile
+++ b/devel/jetbrains-restarter/Makefile
@@ -9,7 +9,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	IntelliJ cross-platform restarter
 WWW=		https://github.com/JetBrains/intellij-community/tree/master/native/restarter
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/../../LICENSE.txt
 
 ONLY_FOR_ARCHS=	aarch64 amd64 powerpc64le
