--- a/devel/py-types-Jinja2/Makefile
+++ b/devel/py-types-Jinja2/Makefile
@@ -8,7 +8,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Typing stubs for Jinja2
 WWW=		https://pypi.org/project/types-Jinja2/
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 
 RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}types-MarkupSafe>=0:devel/py-types-MarkupSafe@${PY_FLAVOR}
 
