--- a/filesystems/py-pyfakefs/Makefile
+++ b/filesystems/py-pyfakefs/Makefile
@@ -9,7 +9,7 @@ COMMENT=	Implement a fake file system that mocks the Python file system modules
 WWW=		https://pytest-pyfakefs.readthedocs.io/en/stable/ \
 		https://github.com/jmcgeheeiv/pyfakefs
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/COPYING
 
 BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}setuptools>=0:devel/py-setuptools@${PY_FLAVOR} \
