--- a/sysutils/beats7/Makefile
+++ b/sysutils/beats7/Makefile
@@ -9,7 +9,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Send logs, network, metrics and heartbeat to elasticsearch or logstash
 WWW=		https://www.elastic.co/products/beats/
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 
 BUILD_DEPENDS=	${LOCALBASE}/bin/mage:devel/mage
 
