--- a/textproc/yq/Makefile
+++ b/textproc/yq/Makefile
@@ -7,7 +7,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Command-line YAML and XML processor, jq wrapper for YAML/XML documents
 WWW=		https://kislyuk.github.io/yq/
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 BUILD_DEPENDS=	${PY_SETUPTOOLS} \
