--- a/x11-fonts/py-babelfont/Makefile
+++ b/x11-fonts/py-babelfont/Makefile
@@ -8,7 +8,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Abstract interface to font source files based on fontParts
 WWW=		https://github.com/simoncozens/babelfont
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}poetry-core>=1.0.0:devel/py-poetry-core@${PY_FLAVOR}
