--- a/x11-fonts/py-cffsubr/Makefile
+++ b/x11-fonts/py-cffsubr/Makefile
@@ -8,7 +8,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Standalone CFF subroutinizer based on the AFDKO tx tool
 WWW=		https://github.com/adobe-type-tools/cffsubr
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}setuptools>=0:devel/py-setuptools@${PY_FLAVOR} \
