--- a/x11-fonts/py-compreffor/Makefile
+++ b/x11-fonts/py-compreffor/Makefile
@@ -8,7 +8,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	CFF table subroutinizer for FontTools
 WWW=		https://github.com/googlefonts/compreffor
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}setuptools-scm>=0:devel/py-setuptools-scm@${PY_FLAVOR} \
