--- a/x11-fonts/py-cu2qu/Makefile
+++ b/x11-fonts/py-cu2qu/Makefile
@@ -9,7 +9,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Cubic-to-quadratic bezier curve conversion
 WWW=		https://github.com/googlefonts/cu2qu
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}setuptools-scm>0:devel/py-setuptools-scm@${PY_FLAVOR}
