--- a/devel/aws-c-common/Makefile
+++ b/devel/aws-c-common/Makefile
@@ -8,7 +8,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Core c99 package for AWS SDK for C
 WWW=		https://github.com/awslabs/aws-c-common
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 USES=		cmake:testing
