--- a/devel/aws-c-http/Makefile
+++ b/devel/aws-c-http/Makefile
@@ -7,7 +7,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	C99 implementation of the HTTP/1.1 and HTTP/2 specifications
 WWW=		https://github.com/awslabs/aws-c-http
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 LIB_DEPENDS=	libaws-c-cal.so:security/aws-c-cal \
