--- a/devel/aws-sdk-cpp/Makefile
+++ b/devel/aws-sdk-cpp/Makefile
@@ -6,7 +6,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	C++ interface for Amazon Web Services (AWS)
 WWW=		https://github.com/aws/aws-sdk-cpp
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 LIB_DEPENDS=	libaws-c-auth.so:security/aws-c-auth \
