--- a/security/aws-c-auth/Makefile
+++ b/security/aws-c-auth/Makefile
@@ -7,7 +7,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	C99 library implementation of AWS client-side authentication
 WWW=		https://github.com/awslabs/aws-c-auth
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 LIB_DEPENDS=	libaws-c-cal.so:security/aws-c-cal \
