--- a/security/py-google-auth-httplib2/Makefile
+++ b/security/py-google-auth-httplib2/Makefile
@@ -9,7 +9,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Google Authentication Library: httplib2 transport
 WWW=		https://github.com/googleapis/google-auth-library-python-httplib2
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}setuptools>=0:devel/py-setuptools@${PY_FLAVOR} \
