--- a/sysutils/btop/Makefile
+++ b/sysutils/btop/Makefile
@@ -7,7 +7,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Monitor of resources
 WWW=		https://github.com/aristocratos/btop
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 FAKE_OPTS=	trueprefix
