--- a/x11-fonts/afdko/Makefile
+++ b/x11-fonts/afdko/Makefile
@@ -7,7 +7,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Adobe Font Development Kit for OpenType (AFDKO)
 WWW=		https://github.com/adobe-type-tools/afdko
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 
 USES=		cmake compiler:c++11-lang gnome
 USE_GNOME=	libxml2
