--- a/x11-fonts/py-axisregistry/Makefile
+++ b/x11-fonts/py-axisregistry/Makefile
@@ -9,7 +9,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Python API to access data from the Google Fonts variable fonts axis registry
 WWW=		https://github.com/googlefonts/axisregistry
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE.txt
 
 BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}setuptools>=61.2:devel/py-setuptools@${PY_FLAVOR} \
