--- a/x11-fonts/py-gfsubsets/Makefile
+++ b/x11-fonts/py-gfsubsets/Makefile
@@ -8,7 +8,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Codepoint definitions for the Google Fonts subsetter
 WWW=		https://github.com/googlefonts/nam-files
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}setuptools>=61.0:devel/py-setuptools@${PY_FLAVOR} \
