--- a/devel/aws-c-compression/Makefile
+++ b/devel/aws-c-compression/Makefile
@@ -7,7 +7,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	C99 implementation of compression algorithms
 WWW=		https://github.com/awslabs/aws-c-compression
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 LIB_DEPENDS=	libaws-c-common.so:devel/aws-c-common
