--- a/filesystems/sandboxfs/Makefile
+++ b/filesystems/sandboxfs/Makefile
@@ -9,7 +9,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Virtual file system for sandboxing
 WWW=		https://github.com/bazelbuild/sandboxfs
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 USES=		cargo fuse
