--- a/devel/aws-c-event-stream/Makefile
+++ b/devel/aws-c-event-stream/Makefile
@@ -8,7 +8,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	C99 implementation of the vnd.amazon.eventstream content-type
 WWW=		https://github.com/awslabs/aws-c-event-stream
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 LIB_DEPENDS=	libaws-c-cal.so:security/aws-c-cal \
