--- a/devel/aws-checksums/Makefile
+++ b/devel/aws-checksums/Makefile
@@ -8,7 +8,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Cross-Platform HW accelerated CRC32c and CRC32
 WWW=		https://github.com/awslabs/aws-checksums
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 LIB_DEPENDS=	libaws-c-common.so:devel/aws-c-common
