--- a/devel/py-testrepository/Makefile
+++ b/devel/py-testrepository/Makefile
@@ -8,7 +8,7 @@ PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Repository of test results
 
-LICENSE=	bsd3 apache2
+LICENSE=	bsd3 Apache-2.0
 LICENSE_COMB=	dual
 
 RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}fixtures>0:devel/py-fixtures@${PY_FLAVOR} \
