--- a/devel/py-types-jsonschema/Makefile
+++ b/devel/py-types-jsonschema/Makefile
@@ -8,7 +8,7 @@ MAINTAINER=     ports@MidnightBSD.org
 COMMENT=        Typing stubs for jsonschema
 WWW=            https://pypi.org/project/types-jsonschema/
 
-LICENSE=        apache2
+LICENSE=        Apache-2.0
 
 USES=           python
 USE_PYTHON=     autoplist distutils
