lang/gcc12: www

--- a/lang/gcc12/Makefile
+++ b/lang/gcc12/Makefile
@@ -6,6 +6,7 @@ PKGNAMESUFFIX=	${SUFFIX}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	GNU Compiler Collection 12
+WWW=		https://gcc.gnu.org
 
 LICENSE=	gpl3
 
