--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -175,6 +175,7 @@ SUBDIR += linux-c7-dri
 SUBDIR += linux-c7-gdk-pixbuf2
 SUBDIR += linux-c7-glx-utils
 SUBDIR += linux-c7-graphite2
+SUBDIR += linux-c7-imageformats-libs
 SUBDIR += linux-c7-jasper
 SUBDIR += linux-c7-jbigkit
 SUBDIR += linux-c7-jpeg
@@ -183,8 +184,6 @@ SUBDIR += linux-c7-libepoxy
 SUBDIR += linux-c7-libglvnd
 SUBDIR += linux-c7-librsvg2
 SUBDIR += linux-c7-png
-SUBDIR += linux-c7-sdl_image
-SUBDIR += linux-c7-sdl_ttf
 SUBDIR += linux-c7-tiff
 SUBDIR += linux-c7-wayland
 SUBDIR += linux-rl9-cairo
