--- a/misc/Makefile
+++ b/misc/Makefile
@@ -36,6 +36,8 @@ SUBDIR += jishyo
 SUBDIR += kf5-purpose
 SUBDIR += kf6-purpose
 SUBDIR += linux-c7-sdl12-extralibs
+SUBDIR += linux-rl9-sdl12-extralibs
+SUBDIR += linux-rl9-sdl20-extralibs
 SUBDIR += localedata
 SUBDIR += mate-user-guide
 SUBDIR += mbuffer
