--- a/devel/Makefile
+++ b/devel/Makefile
@@ -433,6 +433,8 @@ SUBDIR += linux-rl9-qt5
 SUBDIR += linux-rl9-qt5-qtbase
 SUBDIR += linux-rl9-qt5-qtscript
 SUBDIR += linux-rl9-qt5-qttools
+SUBDIR += linux-rl9-sdl12
+SUBDIR += linux-rl9-sdl20
 SUBDIR += linux-rl9-strace
 SUBDIR += linux-rl9-systemd-libs
 SUBDIR += llvm11
