--- a/emulators/linux_base-rl9/Makefile
+++ b/emulators/linux_base-rl9/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	rl9
 PORTVERSION=	${LINUX_DIST_VER}
-PORTREVISION=	3
+PORTREVISION=	4
 CATEGORIES=	emulators linux
 PKGNAMEPREFIX=	linux_base-
 EXTRACT_ONLY=	${DISTFILES:N*${SRC_SUFX}*:Nf/filesystem-*:C/:[^:]+$//}
@@ -15,6 +15,8 @@ USE_LINUX=	# empty
 USE_LINUX_RPM=	yes
 WANT_LINUX32=	yes
 PLIST=                 ${PKGDIR}/pkg-plist.${ARCH}
+
+CONFLICTS_INSTALL=	linux-${linux_ARGS}-libsigsegv
 
 .include	"${.CURDIR}/Makefile.version"
 
@@ -66,13 +68,18 @@ LIB_DISTNAMES=	bzip2-libs-${bzip2_ver} \
 		libgcc-${gcc_ver} \
 		libgudev-${libgudev_ver} \
 		libmount-${util_ver} \
+		libnsl-${glibc_ver} \
+		libproxy-${libproxy_ver} \
 		libselinux-${selinux_ver} \
 		libsepol-${sepol_ver} \
+		libsigsegv-${libsigsegv_ver} \
 		libsmartcols-${util_ver} \
 		libstdc++-${gcc_ver} \
 		libuuid-${util_ver} \
 		libverto-${libverto_ver} \
+		libxcrypt-${libxcrypt_ver} \
 		libzstd-${zstd_ver} \
+		mpfr-${mpfr_ver} \
 		mtdev-${mtdev_ver} \
 		ncurses-libs-${ncurses_ver} \
 		openssl-libs-${openssl_ver} \
@@ -123,9 +130,13 @@ SRC_DISTFILES=	acl-${libacl_ver}${SRC_SUFX}:SOURCE \
 		libevdev-${libevdev_ver}${SRC_SUFX}:SOURCE \
 		libffi-${libffi_ver}${SRC_SUFX}:SOURCE \
 		libgudev-${libgudev_ver}${SRC_SUFX}:SOURCE \
+		libproxy-${libproxy_ver}${SRC_SUFX}:SOURCE \
 		libselinux-${selinux_ver}${SRC_SUFX}:SOURCE \
 		libsepol-${sepol_ver}${SRC_SUFX}:SOURCE \
+		libsigsegv-${libsigsegv_ver}${SRC_SUFX}:SOURCE \
 		libverto-${libverto_ver}${SRC_SUFX}:SOURCE \
+		libxcrypt-${libxcrypt_ver}${SRC_SUFX}:SOURCE \
+		mpfr-${mpfr_ver}${SRC_SUFX}:SOURCE \
 		mtdev-${mtdev_ver}${SRC_SUFX}:SOURCE \
 		ncurses-${ncurses_ver}${SRC_SUFX}:SOURCE \
 		openssl-${openssl_ver}${SRC_SUFX}:SOURCE \
@@ -164,6 +175,7 @@ REMOVE_FILES=	bin/chfn bin/chsh bin/findmnt bin/login bin/lsblk bin/lscpu \
 		usr/bin/taskset usr/bin/unshare usr/sbin/agetty usr/sbin/blkid \
 		usr/sbin/blockdev usr/sbin/fsck usr/sbin/losetup usr/sbin/mkswap \
 		usr/sbin/partx usr/sbin/swapoff usr/sbin/swapon usr/sbin/switch_root \
+		usr/lib/gio/modules/libgiognutls.so usr/lib64/gio/modules/libgiognutls.so \
 		usr/share/man/man1/chrt.1.gz usr/share/man/man1/dmesg.1.gz \
 		usr/share/man/man1/flock.1.gz usr/share/man/man1/hardlink.1.gz \
 		usr/share/man/man1/ionice.1.gz usr/share/man/man1/ipcmk.1.gz \
