--- a/x11-toolkits/linux-c7-openmotif/Makefile
+++ b/x11-toolkits/linux-c7-openmotif/Makefile
@@ -1,5 +1,3 @@
-# Created by: Piotr Kubaj <pkubaj@anongoth.pl>
-
 PORTNAME=	motif
 PORTVERSION=	2.3.4
 DISTVERSIONSUFFIX=	-14.el7_5
@@ -8,6 +6,7 @@ CATEGORIES=	x11-toolkits linux
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Motif toolkit libraries (Linux CentOS ${LINUX_DIST_VER})
+WWW=		https://motif.ics.com/
 
 LICENSE=	lgpl2.1
 
@@ -16,7 +15,7 @@ USE_LDCONFIG=	yes
 USE_LINUX=	xorglibs
 USE_LINUX_RPM=	yes
 
-CONFLICTS=	linux-c6-${PORTNAME}-[0-9]*
+CONFLICTS=	linux-c6-${PORTNAME}
 DESCR=		${.CURDIR}/../open-${PORTNAME}/pkg-descr
 
 OPTIONS_DEFINE=	DOCS
