--- a/x11-toolkits/linux-c7-qt-x11/Makefile
+++ b/x11-toolkits/linux-c7-qt-x11/Makefile
@@ -1,25 +1,22 @@
-# Created by: Piotr Kubaj <pkubaj@anongoth.pl>
-
 PORTNAME=	qt
 PORTVERSION=	4.8.7
 DISTVERSIONSUFFIX=	-9.el7_9
-PORTREVISION=	4
+PORTREVISION=	5
 CATEGORIES=	x11-toolkits linux
 PKGNAMESUFFIX=	-x11
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Cross-platform application and UI framework (Linux CentOS ${LINUX_DIST_VER})
+WWW=		https://qt-project.org
 
-LICENSE=	gpl2
-
-USES=		linux:c7
+USES=		cpe linux:c7
 USE_LDCONFIG=	yes
-USE_LINUX=	alsalib dri fontconfig jpeg png qt tiff xorglibs
+USE_LINUX=	alsalib dri fontconfig imageformats-libs qt xorglibs
 USE_LINUX_RPM=	yes
 
 LIB_DISTNAMES=	${PORTNAME}${PKGNAMESUFFIX}-${DISTVERSIONFULL}
 
-CONFLICTS=	linux-c6-qt47-x11-[0-9]*
+CONFLICTS=	linux-c6-qt47-x11
 DATADIR=	${PREFIX}/usr/share/${PORTNAME}4
 
 post-patch:
