--- a/archivers/linux-rl9-brotli/Makefile
+++ b/archivers/linux-rl9-brotli/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	brotli
 PORTVERSION=	1.0.9
-DISTVERSIONSUFFIX=	-6.el9
+DISTVERSIONSUFFIX=	-7.el9_5
 PORTREVISION=	1
 CATEGORIES=	archivers linux
 
