--- a/accessibility/linux-c7-atk/Makefile
+++ b/accessibility/linux-c7-atk/Makefile
@@ -14,7 +14,7 @@ USES=		linux:c7
 USE_LDCONFIG=	yes
 USE_LINUX_RPM=	yes
 
-CONFLICTS=	linux-c6-${PORTNAME}-[0-9]*
+CONFLICTS=	linux-c6-${PORTNAME}
 
 OPTIONS_DEFINE=	DOCS NLS
 OPTIONS_SUB=	yes
