--- a/audio/linux-c7-alsa-lib/Makefile
+++ b/audio/linux-c7-alsa-lib/Makefile
@@ -5,6 +5,7 @@ CATEGORIES=	audio linux
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Advanced Linux Sound Architecture libraries (Linux CentOS ${LINUX_DIST_VER})
+WWW=		https://www.alsa-project.org/
 
 LICENSE=	gpl3
 
@@ -14,7 +15,7 @@ USES=		linux:c7
 USE_LDCONFIG=	yes
 USE_LINUX_RPM=	yes
 
-CONFLICTS=	linux-c6-${PORTNAME}-[0-9]*
+CONFLICTS=	linux-c6-${PORTNAME}
 
 OPTIONS_DEFINE=	DOCS
 
