--- a/x11-toolkits/qt5-quickcontrols/Makefile
+++ b/x11-toolkits/qt5-quickcontrols/Makefile
@@ -12,5 +12,6 @@ BROKEN_armv6=		fails to install: pkg-static: Unable to access file ApplicationWi
 USES=		compiler:c++11-lang qmake qt-dist:5,quickcontrols
 USE_QT=		core declarative gui widgets \
 		buildtools:build
+USE_LDCONFIG=	${PREFIX}/${QT_LIBDIR_REL}
 
 .include <bsd.port.mk>
