--- a/net/intel-irdma-kmod/Makefile
+++ b/net/intel-irdma-kmod/Makefile
@@ -23,12 +23,12 @@ MAKE_ENV=	WERROR=""
 MAKE_FLAGS=	`make -C ${PORTSDIR}/net/intel-ice-kmod -V WRKSRC`
 MAKEFILE=
 PLIST_FILES=	${KMODDIR}/${PORTNAME}_updated.ko \
-		man/man4/irdma.4.gz
+		share/man/man4/irdma.4.gz
 SUB_FILES=	pkg-message
 SUB_LIST=	PORTNAME=${PORTNAME}
 
 do-install:
 	${INSTALL_KLD} ${WRKSRC}/src/${PORTNAME}.ko ${STAGEDIR}${KMODDIR}/${PORTNAME}_updated.ko
-	${INSTALL_MAN} ${WRKSRC}/doc/${PORTNAME}.4.gz ${STAGEDIR}${MAN4PREFIX}/man/man4/
+	${INSTALL_MAN} ${WRKSRC}/doc/${PORTNAME}.4.gz ${STAGEDIR}${PREFIX}/share/man/man4/
 
 .include <bsd.port.mk>
