graphics/py-cairo: lic

--- a/graphics/py-cairo/Makefile
+++ b/graphics/py-cairo/Makefile
@@ -8,9 +8,9 @@ DISTNAME=	py${PORTNAME}-${PORTVERSION}
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Python 2 bindings for Cairo
 
-LICENSE=	lgpl mpl
+LICENSE=	lgpl2.1 MPL11
 LICENSE_COMB=	multi
-LICENSE_FILE_LGPL21=  ${WRKSRC}/COPYING-LGPL-2.1
+LICENSE_FILE_lgpl2.1=  ${WRKSRC}/COPYING-LGPL-2.1
 LICENSE_FILE_MPL11=   ${WRKSRC}/COPYING-MPL-1.1
 
 PORTSCOUT=	limitw:1,even
