--- a/graphics/gtk-update-icon-cache/Makefile
+++ b/graphics/gtk-update-icon-cache/Makefile
@@ -12,7 +12,7 @@ LICENSE=	lgpl
 LICENSE_FILE=	${WRKSRC}/COPYING
 
 USES=		gettext gnome meson pkgconfig trigger
-USE_GNOME=	gdkpixbuf2
+USE_GNOME=	gdkpixbuf
 USE_GITLAB=	yes
 GL_SITE=	https://gitlab.gnome.org
 GL_ACCOUNT=	Community/gentoo
