devel/py-qtbuilder: update

--- a/devel/py-qtbuilder/Makefile
+++ b/devel/py-qtbuilder/Makefile
@@ -1,4 +1,4 @@
-PORTNAME=	qtbuilder
+PORTNAME=	PyQt-builder
 PORTVERSION=	${PYQTBUILDER_VERSION}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITES_PYQTBUILDER}
@@ -7,11 +7,18 @@ DISTNAME=	${PYQTBUILDER_DISTNAME}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	The PEP 517 compliant PyQt build system
-WWW=		https://www.riverbankcomputing.com/software/pyqt-builder/
+WWW=		https://github.com/Python-PyQt/PyQt-builder
 
-USES=		python pyqt:5
-USE_PYTHON=	autoplist concurrent distutils flavors
-USE_PYQT=	#
+LICENSE=	bsd2
+LICENSE_FILE=	${WRKSRC}/LICENSE
+
+BUILD_DEPENDS=	${PY_SETUPTOOLS} \
+		${PYTHON_PKGNAMEPREFIX}setuptools-scm>=8:devel/py-setuptools-scm@${PY_FLAVOR} \
+		${PYTHON_PKGNAMEPREFIX}wheel>0:devel/py-wheel@${PY_FLAVOR}
+
+USES=		python pyqt:6
+USE_PYQT=	sip
+USE_PYTHON=	autoplist concurrent pep517
 
 NO_ARCH=	yes
 
