--- a/textproc/libwpd/Makefile
+++ b/textproc/libwpd/Makefile
@@ -1,5 +1,3 @@
-
-
 PORTNAME=	libwpd
 PORTVERSION=	0.9.9
 PORTREVISION=	1
@@ -9,7 +7,7 @@ MASTER_SITES=	SF/${PORTNAME}/${PORTNAME}/${PORTNAME}-${PORTVERSION}
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Tools for importing and exporting WordPerfect(tm) documents
 
-LICENSE=	lgpl2.1 mpl
+LICENSE=	lgpl2.1 MPL20
 LICENSE_COMB=	dual
 
 USES=		pathfix libtool:keepla tar:bzip2
