--- a/textproc/libwpd010/Makefile
+++ b/textproc/libwpd010/Makefile
@@ -9,10 +9,10 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Tools for importing and exporting WordPerfect(tm) documents
 WWW=		http://libwpd.sourceforge.net/
 
-LICENSE=	lgpl2.1 mpl
+LICENSE=	lgpl2.1 MPL20
 LICENSE_COMB=	dual
 LICENSE_FILE_lgpl2.1=	${WRKSRC}/COPYING.LGPL
-LICENSE_FILE_mpl=	${WRKSRC}/COPYING.MPL
+LICENSE_FILE_MPL20=	${WRKSRC}/COPYING.MPL
 
 BUILD_DEPENDS=	${LOCALBASE}/include/boost/spirit/include/qi.hpp:devel/boost-libs
 LIB_DEPENDS=	librevenge-0.0.so:textproc/librevenge
