graphics/libavif: pixbuf

--- a/graphics/libavif/Makefile
+++ b/graphics/libavif/Makefile
@@ -52,7 +52,7 @@ LIBYUV_LIB_DEPENDS=	libyuv.so:graphics/libyuv
 LIBYUV_CMAKE_BOOL_OFF=	CMAKE_DISABLE_FIND_PACKAGE_libyuv
 
 PIXBUF_USES=		gnome
-PIXBUF_USE=		GNOME=gdkpixbuf2
+PIXBUF_USE=		GNOME=gdkpixbuf
 PIXBUF_CMAKE_BOOL=	AVIF_BUILD_GDK_PIXBUF
 
 RAV1E_DESC=		AV1 encoding via librav1e
