--- a/databases/gom/Makefile
+++ b/databases/gom/Makefile
@@ -12,7 +12,7 @@ LICENSE=	lgpl2.1
 LICENSE_FILE=	${WRKSRC}/COPYING
 
 USES=		gnome meson pkgconfig python:3.4+ sqlite tar:xz
-USE_GNOME=	gdkpixbuf2 glib20 introspection pygobject3
+USE_GNOME=	gdkpixbuf glib20 introspection pygobject3
 
 USE_LDCONFIG=	yes
 
