--- a/multimedia/libmediaart/Makefile
+++ b/multimedia/libmediaart/Makefile
@@ -1,32 +1,19 @@
-# Created by: Gustau Perez <gustau.perez@gmail.com>
-
 PORTNAME=	libmediaart
-PORTVERSION=	1.9.4
-PORTREVISION=	1
+DISTVERSION=	1.9.6
 CATEGORIES=	multimedia devel
 MASTER_SITES=	GNOME
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Library for handling media art
+WWW=		https://www.gnome.org/
 
 LICENSE=	gpl2 lgpl2.1
 LICENSE_COMB=	dual
 
-BUILD_DEPENDS=	vala>=0:lang/vala
-
-USES=		gnome meson pathfix pkgconfig tar:xz
-USE_GNOME=	gdkpixbuf2 introspection:build
+USES=		gnome meson pathfix pkgconfig tar:xz vala:build
+USE_GNOME=	gdkpixbuf introspection:build
 USE_LDCONFIG=	yes
 
-MESON_ARGS=	-Dimage_library=gdk-pixbuf
-
-OPTIONS_DEFINE=	DOCS
-DOCS_BUILD_DEPENDS=	gtk-doc>=0:textproc/gtk-doc
-DOCS_MESON_ON=	-Dwith-docs=yes
-DOCS_MESON_OFF=	-Dwith-docs=no
-#option('image_library', type: 'combo', choices: ['auto', 'gdk-pixbuf', 'qt4', 'qt5'],
-#       description: 'Which image processing backend to use')
-#option('with-docs', type : 'combo', choices : ['auto', 'yes', 'no'], value : 'auto')
-
+MESON_ARGS=	-Dimage_library=gdk-pixbuf -Dgtk_doc=false
 
 .include <bsd.port.mk>
