--- a/x11/Makefile
+++ b/x11/Makefile
@@ -267,6 +267,7 @@ SUBDIR += xsel
 SUBDIR += xsel-conrad
 SUBDIR += xset
 SUBDIR += xsetroot
+SUBDIR += xsettingsd
 SUBDIR += xsm
 SUBDIR += xterm
 SUBDIR += xtitle
