--- a/databases/py-pymysql/Makefile
+++ b/databases/py-pymysql/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	pymysql
-PORTVERSION=	0.10.1
+PORTVERSION=	1.0.2
 CATEGORIES=	databases python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
@@ -7,6 +7,7 @@ DISTNAME=	PyMySQL-${PORTVERSION}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Pure Python MySQL Driver
+WWW=		https://github.com/PyMySQL/PyMySQL
 
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/LICENSE
